--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     implementation "org.springframework:spring-webflux:6.1.4"
     implementation "org.springframework:spring-context:6.1.4"
     implementation "org.springframework.security:spring-security-core:6.1.4"
-    implementation "io.projectreactor.netty:reactor-netty-http:1.1.2"
+    implementation "io.projectreactor.netty:reactor-netty-http:1.1.15"
     implementation "org.apache.jena:jena-core:4.10.0"
     implementation "org.apache.jena:jena-arq:4.10.0"
     implementation "org.apache.jena:jena-rdfconnection:4.10.0"
@@ -74,10 +74,10 @@ dependencies {
 
     implementation "fi.vm.yti:yti-spring-security:0.4.0"
 
-    implementation "io.swagger.core.v3:swagger-annotations:2.2.20"
-
     testImplementation platform("org.junit:junit-bom:5.9.1")
     testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.mockito:mockito-core:4.8.0"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:3.2.4"
 }
 
 test {
